FLCD/Laboratories/Lab71/lang.output
Terminals unused in grammar

    NOT
    DOT
    '+'
    '-'
    '*'
    '/'
    MOD
    READ_OP
    WRITE_OP
    COMMA
    COLON
    SPACE


Rules useless in parser due to conflicts

    6 typeTemp: %empty


State 3 conflicts: 1 shift/reduce
State 20 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: GO cmpdstmt

    2 declaration: type ID

    3 type: NUMBER
    4     | STRING
    5     | typeTemp

    6 typeTemp: %empty
    7         | ARRAY OPEN_RIGHT_BRACKET CONST CLOSED_RIGHT_BRACKET

    8 cmpdstmt: OPEN_CURLY_BRACKET stmtlist CLOSED_CURLY_BRACKET

    9 stmtlist: stmt stmtTemp

   10 stmtTemp: %empty
   11         | stmtlist

   12 stmt: simplstmt SEMI_COLON
   13     | structstmt

   14 simplstmt: assignstmt
   15          | iostmt
   16          | declaration

   17 structstmt: cmpdstmt
   18           | ifstmt
   19           | whilestmt
   20           | forstmt

   21 ifstmt: IF OPEN_ROUND_BRACKET boolean_condition CLOSED_ROUND_BRACKET cmpdstmt tempIf

   22 tempIf: %empty
   23       | ELSE cmpdstmt

   24 forstmt: FOR forheader cmpdstmt

   25 forheader: OPEN_ROUND_BRACKET NUMBER assignstmt SEMI_COLON OPEN_ROUND_BRACKET boolean_condition CLOSED_ROUND_BRACKET SEMI_COLON assignstmt CLOSED_ROUND_BRACKET

   26 whilestmt: WHILE OPEN_ROUND_BRACKET boolean_condition CLOSED_ROUND_BRACKET cmpdstmt

   27 assignstmt: ID ATRIB expression

   28 expression: arithmetic2 arithmetic1

   29 arithmetic1: PLUS arithmetic2 arithmetic1
   30            | MINUS arithmetic2 arithmetic1
   31            | %empty

   32 arithmetic2: multiply2 multiply1

   33 multiply1: MUL multiply2 multiply1
   34          | DIV multiply2 multiply1
   35          | %empty

   36 multiply2: OPEN_ROUND_BRACKET expression CLOSED_ROUND_BRACKET
   37          | CONST
   38          | ID
   39          | IndexedIdentifier

   40 IndexedIdentifier: ID OPEN_RIGHT_BRACKET CONST CLOSED_RIGHT_BRACKET

   41 iostmt: CITIRE OPEN_ROUND_BRACKET ID CLOSED_ROUND_BRACKET
   42       | AFISARE OPEN_ROUND_BRACKET ID CLOSED_ROUND_BRACKET
   43       | AFISARE OPEN_ROUND_BRACKET CONST CLOSED_ROUND_BRACKET

   44 condition: expression GT expression
   45          | expression GE expression
   46          | expression LT expression
   47          | expression LE expression
   48          | expression EQ expression
   49          | expression NE expression

   50 boolean_condition: condition boolean_cond_temp

   51 boolean_cond_temp: %empty
   52                  | AND boolean_condition
   53                  | OR boolean_condition
   54                  | XOR boolean_condition


Terminals, with rules where they appear

    $end (0) 0
    '*' (42)
    '+' (43)
    '-' (45)
    '/' (47)
    error (256)
    AND (258) 52
    ARRAY (259) 7
    ELSE (260) 23
    FOR (261) 24
    GO (262) 1
    IF (263) 21
    NUMBER (264) 3 25
    OR (265) 53
    CITIRE (266) 41
    AFISARE (267) 42 43
    STRING (268) 4
    WHILE (269) 26
    XOR (270) 54
    ID (271) 2 27 38 40 41 42
    CONST (272) 7 37 40 43
    ATRIB (273) 27
    EQ (274) 48
    NE (275) 49
    LE (276) 47
    GE (277) 45
    LT (278) 46
    GT (279) 44
    NOT (280)
    DOT (281)
    PLUS (282) 29
    MINUS (283) 30
    DIV (284) 34
    MOD (285)
    MUL (286) 33
    OPEN_CURLY_BRACKET (287) 8
    CLOSED_CURLY_BRACKET (288) 8
    OPEN_ROUND_BRACKET (289) 21 25 26 36 41 42 43
    CLOSED_ROUND_BRACKET (290) 21 25 26 36 41 42 43
    OPEN_RIGHT_BRACKET (291) 7 40
    CLOSED_RIGHT_BRACKET (292) 7 40
    READ_OP (293)
    WRITE_OP (294)
    COMMA (295)
    SEMI_COLON (296) 12 25
    COLON (297)
    SPACE (298)


Nonterminals, with rules where they appear

    $accept (48)
        on left: 0
    program (49)
        on left: 1
        on right: 0
    declaration (50)
        on left: 2
        on right: 16
    type (51)
        on left: 3 4 5
        on right: 2
    typeTemp (52)
        on left: 6 7
        on right: 5
    cmpdstmt (53)
        on left: 8
        on right: 1 17 21 23 24 26
    stmtlist (54)
        on left: 9
        on right: 8 11
    stmtTemp (55)
        on left: 10 11
        on right: 9
    stmt (56)
        on left: 12 13
        on right: 9
    simplstmt (57)
        on left: 14 15 16
        on right: 12
    structstmt (58)
        on left: 17 18 19 20
        on right: 13
    ifstmt (59)
        on left: 21
        on right: 18
    tempIf (60)
        on left: 22 23
        on right: 21
    forstmt (61)
        on left: 24
        on right: 20
    forheader (62)
        on left: 25
        on right: 24
    whilestmt (63)
        on left: 26
        on right: 19
    assignstmt (64)
        on left: 27
        on right: 14 25
    expression (65)
        on left: 28
        on right: 27 36 44 45 46 47 48 49
    arithmetic1 (66)
        on left: 29 30 31
        on right: 28 29 30
    arithmetic2 (67)
        on left: 32
        on right: 28 29 30
    multiply1 (68)
        on left: 33 34 35
        on right: 32 33 34
    multiply2 (69)
        on left: 36 37 38 39
        on right: 32 33 34
    IndexedIdentifier (70)
        on left: 40
        on right: 39
    iostmt (71)
        on left: 41 42 43
        on right: 15
    condition (72)
        on left: 44 45 46 47 48 49
        on right: 50
    boolean_condition (73)
        on left: 50
        on right: 21 25 26 52 53 54
    boolean_cond_temp (74)
        on left: 51 52 53 54
        on right: 50


State 0

    0 $accept: . program $end

    GO  shift, and go to state 1

    program  go to state 2


State 1

    1 program: GO . cmpdstmt

    OPEN_CURLY_BRACKET  shift, and go to state 3

    cmpdstmt  go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    8 cmpdstmt: OPEN_CURLY_BRACKET . stmtlist CLOSED_CURLY_BRACKET

    ARRAY               shift, and go to state 6
    FOR                 shift, and go to state 7
    IF                  shift, and go to state 8
    NUMBER              shift, and go to state 9
    CITIRE              shift, and go to state 10
    AFISARE             shift, and go to state 11
    STRING              shift, and go to state 12
    WHILE               shift, and go to state 13
    ID                  shift, and go to state 14
    OPEN_CURLY_BRACKET  shift, and go to state 3

    ID  [reduce using rule 6 (typeTemp)]

    declaration  go to state 15
    type         go to state 16
    typeTemp     go to state 17
    cmpdstmt     go to state 18
    stmtlist     go to state 19
    stmt         go to state 20
    simplstmt    go to state 21
    structstmt   go to state 22
    ifstmt       go to state 23
    forstmt      go to state 24
    whilestmt    go to state 25
    assignstmt   go to state 26
    iostmt       go to state 27


State 4

    1 program: GO cmpdstmt .

    $default  reduce using rule 1 (program)


State 5

    0 $accept: program $end .

    $default  accept


State 6

    7 typeTemp: ARRAY . OPEN_RIGHT_BRACKET CONST CLOSED_RIGHT_BRACKET

    OPEN_RIGHT_BRACKET  shift, and go to state 28


State 7

   24 forstmt: FOR . forheader cmpdstmt

    OPEN_ROUND_BRACKET  shift, and go to state 29

    forheader  go to state 30


State 8

   21 ifstmt: IF . OPEN_ROUND_BRACKET boolean_condition CLOSED_ROUND_BRACKET cmpdstmt tempIf

    OPEN_ROUND_BRACKET  shift, and go to state 31


State 9

    3 type: NUMBER .

    $default  reduce using rule 3 (type)


State 10

   41 iostmt: CITIRE . OPEN_ROUND_BRACKET ID CLOSED_ROUND_BRACKET

    OPEN_ROUND_BRACKET  shift, and go to state 32


State 11

   42 iostmt: AFISARE . OPEN_ROUND_BRACKET ID CLOSED_ROUND_BRACKET
   43       | AFISARE . OPEN_ROUND_BRACKET CONST CLOSED_ROUND_BRACKET

    OPEN_ROUND_BRACKET  shift, and go to state 33


State 12

    4 type: STRING .

    $default  reduce using rule 4 (type)


State 13

   26 whilestmt: WHILE . OPEN_ROUND_BRACKET boolean_condition CLOSED_ROUND_BRACKET cmpdstmt

    OPEN_ROUND_BRACKET  shift, and go to state 34


State 14

   27 assignstmt: ID . ATRIB expression

    ATRIB  shift, and go to state 35


State 15

   16 simplstmt: declaration .

    $default  reduce using rule 16 (simplstmt)


State 16

    2 declaration: type . ID

    ID  shift, and go to state 36


State 17

    5 type: typeTemp .

    $default  reduce using rule 5 (type)


State 18

   17 structstmt: cmpdstmt .

    $default  reduce using rule 17 (structstmt)


State 19

    8 cmpdstmt: OPEN_CURLY_BRACKET stmtlist . CLOSED_CURLY_BRACKET

    CLOSED_CURLY_BRACKET  shift, and go to state 37


State 20

    9 stmtlist: stmt . stmtTemp

    ARRAY               shift, and go to state 6
    FOR                 shift, and go to state 7
    IF                  shift, and go to state 8
    NUMBER              shift, and go to state 9
    CITIRE              shift, and go to state 10
    AFISARE             shift, and go to state 11
    STRING              shift, and go to state 12
    WHILE               shift, and go to state 13
    ID                  shift, and go to state 14
    OPEN_CURLY_BRACKET  shift, and go to state 3

    ID        [reduce using rule 6 (typeTemp)]
    $default  reduce using rule 10 (stmtTemp)

    declaration  go to state 15
    type         go to state 16
    typeTemp     go to state 17
    cmpdstmt     go to state 18
    stmtlist     go to state 38
    stmtTemp     go to state 39
    stmt         go to state 20
    simplstmt    go to state 21
    structstmt   go to state 22
    ifstmt       go to state 23
    forstmt      go to state 24
    whilestmt    go to state 25
    assignstmt   go to state 26
    iostmt       go to state 27


State 21

   12 stmt: simplstmt . SEMI_COLON

    SEMI_COLON  shift, and go to state 40


State 22

   13 stmt: structstmt .

    $default  reduce using rule 13 (stmt)


State 23

   18 structstmt: ifstmt .

    $default  reduce using rule 18 (structstmt)


State 24

   20 structstmt: forstmt .

    $default  reduce using rule 20 (structstmt)


State 25

   19 structstmt: whilestmt .

    $default  reduce using rule 19 (structstmt)


State 26

   14 simplstmt: assignstmt .

    $default  reduce using rule 14 (simplstmt)


State 27

   15 simplstmt: iostmt .

    $default  reduce using rule 15 (simplstmt)


State 28

    7 typeTemp: ARRAY OPEN_RIGHT_BRACKET . CONST CLOSED_RIGHT_BRACKET

    CONST  shift, and go to state 41


State 29

   25 forheader: OPEN_ROUND_BRACKET . NUMBER assignstmt SEMI_COLON OPEN_ROUND_BRACKET boolean_condition CLOSED_ROUND_BRACKET SEMI_COLON assignstmt CLOSED_ROUND_BRACKET

    NUMBER  shift, and go to state 42


State 30

   24 forstmt: FOR forheader . cmpdstmt

    OPEN_CURLY_BRACKET  shift, and go to state 3

    cmpdstmt  go to state 43


State 31

   21 ifstmt: IF OPEN_ROUND_BRACKET . boolean_condition CLOSED_ROUND_BRACKET cmpdstmt tempIf

    ID                  shift, and go to state 44
    CONST               shift, and go to state 45
    OPEN_ROUND_BRACKET  shift, and go to state 46

    expression         go to state 47
    arithmetic2        go to state 48
    multiply2          go to state 49
    IndexedIdentifier  go to state 50
    condition          go to state 51
    boolean_condition  go to state 52


State 32

   41 iostmt: CITIRE OPEN_ROUND_BRACKET . ID CLOSED_ROUND_BRACKET

    ID  shift, and go to state 53


State 33

   42 iostmt: AFISARE OPEN_ROUND_BRACKET . ID CLOSED_ROUND_BRACKET
   43       | AFISARE OPEN_ROUND_BRACKET . CONST CLOSED_ROUND_BRACKET

    ID     shift, and go to state 54
    CONST  shift, and go to state 55


State 34

   26 whilestmt: WHILE OPEN_ROUND_BRACKET . boolean_condition CLOSED_ROUND_BRACKET cmpdstmt

    ID                  shift, and go to state 44
    CONST               shift, and go to state 45
    OPEN_ROUND_BRACKET  shift, and go to state 46

    expression         go to state 47
    arithmetic2        go to state 48
    multiply2          go to state 49
    IndexedIdentifier  go to state 50
    condition          go to state 51
    boolean_condition  go to state 56


State 35

   27 assignstmt: ID ATRIB . expression

    ID                  shift, and go to state 44
    CONST               shift, and go to state 45
    OPEN_ROUND_BRACKET  shift, and go to state 46

    expression         go to state 57
    arithmetic2        go to state 48
    multiply2          go to state 49
    IndexedIdentifier  go to state 50


State 36

    2 declaration: type ID .

    $default  reduce using rule 2 (declaration)


State 37

    8 cmpdstmt: OPEN_CURLY_BRACKET stmtlist CLOSED_CURLY_BRACKET .

    $default  reduce using rule 8 (cmpdstmt)


State 38

   11 stmtTemp: stmtlist .

    $default  reduce using rule 11 (stmtTemp)


State 39

    9 stmtlist: stmt stmtTemp .

    $default  reduce using rule 9 (stmtlist)


State 40

   12 stmt: simplstmt SEMI_COLON .

    $default  reduce using rule 12 (stmt)


State 41

    7 typeTemp: ARRAY OPEN_RIGHT_BRACKET CONST . CLOSED_RIGHT_BRACKET

    CLOSED_RIGHT_BRACKET  shift, and go to state 58


State 42

   25 forheader: OPEN_ROUND_BRACKET NUMBER . assignstmt SEMI_COLON OPEN_ROUND_BRACKET boolean_condition CLOSED_ROUND_BRACKET SEMI_COLON assignstmt CLOSED_ROUND_BRACKET

    ID  shift, and go to state 14

    assignstmt  go to state 59


State 43

   24 forstmt: FOR forheader cmpdstmt .

    $default  reduce using rule 24 (forstmt)


State 44

   38 multiply2: ID .
   40 IndexedIdentifier: ID . OPEN_RIGHT_BRACKET CONST CLOSED_RIGHT_BRACKET

    OPEN_RIGHT_BRACKET  shift, and go to state 60

    $default  reduce using rule 38 (multiply2)


State 45

   37 multiply2: CONST .

    $default  reduce using rule 37 (multiply2)


State 46

   36 multiply2: OPEN_ROUND_BRACKET . expression CLOSED_ROUND_BRACKET

    ID                  shift, and go to state 44
    CONST               shift, and go to state 45
    OPEN_ROUND_BRACKET  shift, and go to state 46

    expression         go to state 61
    arithmetic2        go to state 48
    multiply2          go to state 49
    IndexedIdentifier  go to state 50


State 47

   44 condition: expression . GT expression
   45          | expression . GE expression
   46          | expression . LT expression
   47          | expression . LE expression
   48          | expression . EQ expression
   49          | expression . NE expression

    EQ  shift, and go to state 62
    NE  shift, and go to state 63
    LE  shift, and go to state 64
    GE  shift, and go to state 65
    LT  shift, and go to state 66
    GT  shift, and go to state 67


State 48

   28 expression: arithmetic2 . arithmetic1

    PLUS   shift, and go to state 68
    MINUS  shift, and go to state 69

    $default  reduce using rule 31 (arithmetic1)

    arithmetic1  go to state 70


State 49

   32 arithmetic2: multiply2 . multiply1

    DIV  shift, and go to state 71
    MUL  shift, and go to state 72

    $default  reduce using rule 35 (multiply1)

    multiply1  go to state 73


State 50

   39 multiply2: IndexedIdentifier .

    $default  reduce using rule 39 (multiply2)


State 51

   50 boolean_condition: condition . boolean_cond_temp

    AND  shift, and go to state 74
    OR   shift, and go to state 75
    XOR  shift, and go to state 76

    $default  reduce using rule 51 (boolean_cond_temp)

    boolean_cond_temp  go to state 77


State 52

   21 ifstmt: IF OPEN_ROUND_BRACKET boolean_condition . CLOSED_ROUND_BRACKET cmpdstmt tempIf

    CLOSED_ROUND_BRACKET  shift, and go to state 78


State 53

   41 iostmt: CITIRE OPEN_ROUND_BRACKET ID . CLOSED_ROUND_BRACKET

    CLOSED_ROUND_BRACKET  shift, and go to state 79


State 54

   42 iostmt: AFISARE OPEN_ROUND_BRACKET ID . CLOSED_ROUND_BRACKET

    CLOSED_ROUND_BRACKET  shift, and go to state 80


State 55

   43 iostmt: AFISARE OPEN_ROUND_BRACKET CONST . CLOSED_ROUND_BRACKET

    CLOSED_ROUND_BRACKET  shift, and go to state 81


State 56

   26 whilestmt: WHILE OPEN_ROUND_BRACKET boolean_condition . CLOSED_ROUND_BRACKET cmpdstmt

    CLOSED_ROUND_BRACKET  shift, and go to state 82


State 57

   27 assignstmt: ID ATRIB expression .

    $default  reduce using rule 27 (assignstmt)


State 58

    7 typeTemp: ARRAY OPEN_RIGHT_BRACKET CONST CLOSED_RIGHT_BRACKET .

    $default  reduce using rule 7 (typeTemp)


State 59

   25 forheader: OPEN_ROUND_BRACKET NUMBER assignstmt . SEMI_COLON OPEN_ROUND_BRACKET boolean_condition CLOSED_ROUND_BRACKET SEMI_COLON assignstmt CLOSED_ROUND_BRACKET

    SEMI_COLON  shift, and go to state 83


State 60

   40 IndexedIdentifier: ID OPEN_RIGHT_BRACKET . CONST CLOSED_RIGHT_BRACKET

    CONST  shift, and go to state 84


State 61

   36 multiply2: OPEN_ROUND_BRACKET expression . CLOSED_ROUND_BRACKET

    CLOSED_ROUND_BRACKET  shift, and go to state 85


State 62

   48 condition: expression EQ . expression

    ID                  shift, and go to state 44
    CONST               shift, and go to state 45
    OPEN_ROUND_BRACKET  shift, and go to state 46

    expression         go to state 86
    arithmetic2        go to state 48
    multiply2          go to state 49
    IndexedIdentifier  go to state 50


State 63

   49 condition: expression NE . expression

    ID                  shift, and go to state 44
    CONST               shift, and go to state 45
    OPEN_ROUND_BRACKET  shift, and go to state 46

    expression         go to state 87
    arithmetic2        go to state 48
    multiply2          go to state 49
    IndexedIdentifier  go to state 50


State 64

   47 condition: expression LE . expression

    ID                  shift, and go to state 44
    CONST               shift, and go to state 45
    OPEN_ROUND_BRACKET  shift, and go to state 46

    expression         go to state 88
    arithmetic2        go to state 48
    multiply2          go to state 49
    IndexedIdentifier  go to state 50


State 65

   45 condition: expression GE . expression

    ID                  shift, and go to state 44
    CONST               shift, and go to state 45
    OPEN_ROUND_BRACKET  shift, and go to state 46

    expression         go to state 89
    arithmetic2        go to state 48
    multiply2          go to state 49
    IndexedIdentifier  go to state 50


State 66

   46 condition: expression LT . expression

    ID                  shift, and go to state 44
    CONST               shift, and go to state 45
    OPEN_ROUND_BRACKET  shift, and go to state 46

    expression         go to state 90
    arithmetic2        go to state 48
    multiply2          go to state 49
    IndexedIdentifier  go to state 50


State 67

   44 condition: expression GT . expression

    ID                  shift, and go to state 44
    CONST               shift, and go to state 45
    OPEN_ROUND_BRACKET  shift, and go to state 46

    expression         go to state 91
    arithmetic2        go to state 48
    multiply2          go to state 49
    IndexedIdentifier  go to state 50


State 68

   29 arithmetic1: PLUS . arithmetic2 arithmetic1

    ID                  shift, and go to state 44
    CONST               shift, and go to state 45
    OPEN_ROUND_BRACKET  shift, and go to state 46

    arithmetic2        go to state 92
    multiply2          go to state 49
    IndexedIdentifier  go to state 50


State 69

   30 arithmetic1: MINUS . arithmetic2 arithmetic1

    ID                  shift, and go to state 44
    CONST               shift, and go to state 45
    OPEN_ROUND_BRACKET  shift, and go to state 46

    arithmetic2        go to state 93
    multiply2          go to state 49
    IndexedIdentifier  go to state 50


State 70

   28 expression: arithmetic2 arithmetic1 .

    $default  reduce using rule 28 (expression)


State 71

   34 multiply1: DIV . multiply2 multiply1

    ID                  shift, and go to state 44
    CONST               shift, and go to state 45
    OPEN_ROUND_BRACKET  shift, and go to state 46

    multiply2          go to state 94
    IndexedIdentifier  go to state 50


State 72

   33 multiply1: MUL . multiply2 multiply1

    ID                  shift, and go to state 44
    CONST               shift, and go to state 45
    OPEN_ROUND_BRACKET  shift, and go to state 46

    multiply2          go to state 95
    IndexedIdentifier  go to state 50


State 73

   32 arithmetic2: multiply2 multiply1 .

    $default  reduce using rule 32 (arithmetic2)


State 74

   52 boolean_cond_temp: AND . boolean_condition

    ID                  shift, and go to state 44
    CONST               shift, and go to state 45
    OPEN_ROUND_BRACKET  shift, and go to state 46

    expression         go to state 47
    arithmetic2        go to state 48
    multiply2          go to state 49
    IndexedIdentifier  go to state 50
    condition          go to state 51
    boolean_condition  go to state 96


State 75

   53 boolean_cond_temp: OR . boolean_condition

    ID                  shift, and go to state 44
    CONST               shift, and go to state 45
    OPEN_ROUND_BRACKET  shift, and go to state 46

    expression         go to state 47
    arithmetic2        go to state 48
    multiply2          go to state 49
    IndexedIdentifier  go to state 50
    condition          go to state 51
    boolean_condition  go to state 97


State 76

   54 boolean_cond_temp: XOR . boolean_condition

    ID                  shift, and go to state 44
    CONST               shift, and go to state 45
    OPEN_ROUND_BRACKET  shift, and go to state 46

    expression         go to state 47
    arithmetic2        go to state 48
    multiply2          go to state 49
    IndexedIdentifier  go to state 50
    condition          go to state 51
    boolean_condition  go to state 98


State 77

   50 boolean_condition: condition boolean_cond_temp .

    $default  reduce using rule 50 (boolean_condition)


State 78

   21 ifstmt: IF OPEN_ROUND_BRACKET boolean_condition CLOSED_ROUND_BRACKET . cmpdstmt tempIf

    OPEN_CURLY_BRACKET  shift, and go to state 3

    cmpdstmt  go to state 99


State 79

   41 iostmt: CITIRE OPEN_ROUND_BRACKET ID CLOSED_ROUND_BRACKET .

    $default  reduce using rule 41 (iostmt)


State 80

   42 iostmt: AFISARE OPEN_ROUND_BRACKET ID CLOSED_ROUND_BRACKET .

    $default  reduce using rule 42 (iostmt)


State 81

   43 iostmt: AFISARE OPEN_ROUND_BRACKET CONST CLOSED_ROUND_BRACKET .

    $default  reduce using rule 43 (iostmt)


State 82

   26 whilestmt: WHILE OPEN_ROUND_BRACKET boolean_condition CLOSED_ROUND_BRACKET . cmpdstmt

    OPEN_CURLY_BRACKET  shift, and go to state 3

    cmpdstmt  go to state 100


State 83

   25 forheader: OPEN_ROUND_BRACKET NUMBER assignstmt SEMI_COLON . OPEN_ROUND_BRACKET boolean_condition CLOSED_ROUND_BRACKET SEMI_COLON assignstmt CLOSED_ROUND_BRACKET

    OPEN_ROUND_BRACKET  shift, and go to state 101


State 84

   40 IndexedIdentifier: ID OPEN_RIGHT_BRACKET CONST . CLOSED_RIGHT_BRACKET

    CLOSED_RIGHT_BRACKET  shift, and go to state 102


State 85

   36 multiply2: OPEN_ROUND_BRACKET expression CLOSED_ROUND_BRACKET .

    $default  reduce using rule 36 (multiply2)


State 86

   48 condition: expression EQ expression .

    $default  reduce using rule 48 (condition)


State 87

   49 condition: expression NE expression .

    $default  reduce using rule 49 (condition)


State 88

   47 condition: expression LE expression .

    $default  reduce using rule 47 (condition)


State 89

   45 condition: expression GE expression .

    $default  reduce using rule 45 (condition)


State 90

   46 condition: expression LT expression .

    $default  reduce using rule 46 (condition)


State 91

   44 condition: expression GT expression .

    $default  reduce using rule 44 (condition)


State 92

   29 arithmetic1: PLUS arithmetic2 . arithmetic1

    PLUS   shift, and go to state 68
    MINUS  shift, and go to state 69

    $default  reduce using rule 31 (arithmetic1)

    arithmetic1  go to state 103


State 93

   30 arithmetic1: MINUS arithmetic2 . arithmetic1

    PLUS   shift, and go to state 68
    MINUS  shift, and go to state 69

    $default  reduce using rule 31 (arithmetic1)

    arithmetic1  go to state 104


State 94

   34 multiply1: DIV multiply2 . multiply1

    DIV  shift, and go to state 71
    MUL  shift, and go to state 72

    $default  reduce using rule 35 (multiply1)

    multiply1  go to state 105


State 95

   33 multiply1: MUL multiply2 . multiply1

    DIV  shift, and go to state 71
    MUL  shift, and go to state 72

    $default  reduce using rule 35 (multiply1)

    multiply1  go to state 106


State 96

   52 boolean_cond_temp: AND boolean_condition .

    $default  reduce using rule 52 (boolean_cond_temp)


State 97

   53 boolean_cond_temp: OR boolean_condition .

    $default  reduce using rule 53 (boolean_cond_temp)


State 98

   54 boolean_cond_temp: XOR boolean_condition .

    $default  reduce using rule 54 (boolean_cond_temp)


State 99

   21 ifstmt: IF OPEN_ROUND_BRACKET boolean_condition CLOSED_ROUND_BRACKET cmpdstmt . tempIf

    ELSE  shift, and go to state 107

    $default  reduce using rule 22 (tempIf)

    tempIf  go to state 108


State 100

   26 whilestmt: WHILE OPEN_ROUND_BRACKET boolean_condition CLOSED_ROUND_BRACKET cmpdstmt .

    $default  reduce using rule 26 (whilestmt)


State 101

   25 forheader: OPEN_ROUND_BRACKET NUMBER assignstmt SEMI_COLON OPEN_ROUND_BRACKET . boolean_condition CLOSED_ROUND_BRACKET SEMI_COLON assignstmt CLOSED_ROUND_BRACKET

    ID                  shift, and go to state 44
    CONST               shift, and go to state 45
    OPEN_ROUND_BRACKET  shift, and go to state 46

    expression         go to state 47
    arithmetic2        go to state 48
    multiply2          go to state 49
    IndexedIdentifier  go to state 50
    condition          go to state 51
    boolean_condition  go to state 109


State 102

   40 IndexedIdentifier: ID OPEN_RIGHT_BRACKET CONST CLOSED_RIGHT_BRACKET .

    $default  reduce using rule 40 (IndexedIdentifier)


State 103

   29 arithmetic1: PLUS arithmetic2 arithmetic1 .

    $default  reduce using rule 29 (arithmetic1)


State 104

   30 arithmetic1: MINUS arithmetic2 arithmetic1 .

    $default  reduce using rule 30 (arithmetic1)


State 105

   34 multiply1: DIV multiply2 multiply1 .

    $default  reduce using rule 34 (multiply1)


State 106

   33 multiply1: MUL multiply2 multiply1 .

    $default  reduce using rule 33 (multiply1)


State 107

   23 tempIf: ELSE . cmpdstmt

    OPEN_CURLY_BRACKET  shift, and go to state 3

    cmpdstmt  go to state 110


State 108

   21 ifstmt: IF OPEN_ROUND_BRACKET boolean_condition CLOSED_ROUND_BRACKET cmpdstmt tempIf .

    $default  reduce using rule 21 (ifstmt)


State 109

   25 forheader: OPEN_ROUND_BRACKET NUMBER assignstmt SEMI_COLON OPEN_ROUND_BRACKET boolean_condition . CLOSED_ROUND_BRACKET SEMI_COLON assignstmt CLOSED_ROUND_BRACKET

    CLOSED_ROUND_BRACKET  shift, and go to state 111


State 110

   23 tempIf: ELSE cmpdstmt .

    $default  reduce using rule 23 (tempIf)


State 111

   25 forheader: OPEN_ROUND_BRACKET NUMBER assignstmt SEMI_COLON OPEN_ROUND_BRACKET boolean_condition CLOSED_ROUND_BRACKET . SEMI_COLON assignstmt CLOSED_ROUND_BRACKET

    SEMI_COLON  shift, and go to state 112


State 112

   25 forheader: OPEN_ROUND_BRACKET NUMBER assignstmt SEMI_COLON OPEN_ROUND_BRACKET boolean_condition CLOSED_ROUND_BRACKET SEMI_COLON . assignstmt CLOSED_ROUND_BRACKET

    ID  shift, and go to state 14

    assignstmt  go to state 113


State 113

   25 forheader: OPEN_ROUND_BRACKET NUMBER assignstmt SEMI_COLON OPEN_ROUND_BRACKET boolean_condition CLOSED_ROUND_BRACKET SEMI_COLON assignstmt . CLOSED_ROUND_BRACKET

    CLOSED_ROUND_BRACKET  shift, and go to state 114


State 114

   25 forheader: OPEN_ROUND_BRACKET NUMBER assignstmt SEMI_COLON OPEN_ROUND_BRACKET boolean_condition CLOSED_ROUND_BRACKET SEMI_COLON assignstmt CLOSED_ROUND_BRACKET .

    $default  reduce using rule 25 (forheader)
